# webcam-surveillance

./: .gitignore  LICENSE  MISTRAL_PROMPT.md  README.md  config-template.toml  pyproject.toml
webcam_surveillance/: __init__.py  __main__.py  configuration.py  email_sender.py  enums.py  notifier.py  video_saver.py  webcam_properties.py  webcam_watcher.py
